update for jdk19; add benchmark working; multiply benchmark added.